meja/tests/list_wrong_type.stderr
File "tests/list_wrong_type.meja", line 3, characters 16-17:
Error: Incompatable types _ and list(field_var):
       Cannot unify bool and field
